# BKS

./: .env.example  .gitignore  main.py  pyproject.toml
config/: config.yaml
notebooks/: 01_data_exploration.ipynb
src/: __init__.py  config_manager.py  data_loader.py  indicator.py  indicator_MyTT.py  utils.py
src/signals/: __init__.py  base.py  boll_signal.py  kdj_signal.py  macd_signal.py  rsi_signal.py
src/strategy/: __init__.py
src/utils/: __init__.py  get_data.py  indicator_MyTT.py
